# Cpp-SDL-Particle-fire-Simulator

./: CMakeLists.txt  README.md  main.cpp
config/: Screen.cpp  Screen.h
include/: SDL_config.h.cmake  SDL_hints.h  SDL_touch.h
